<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@drawable/background_blue_grin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/space"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/main_img"
            android:layout_weight="4"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/menu"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/play"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/train"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/train"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/progress"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="italic"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:srcCompat="@drawable/space"
            android:layout_weight="3"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>