<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Play_1_of_2"
    android:background="@drawable/backgraund_blue_grin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_games_1_of_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choiсe_1_of_2_plays"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/img_open_all_games_1_of_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/space" />

            <LinearLayout
                android:id="@+id/picture_cards"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/background_gif_lvl_open">

                <ImageView
                    android:id="@+id/img_picture_cards"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/cards" />

                <TextView
                    android:id="@+id/text_picture_cards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/picture_cards"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/where_is_the_rabbit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@drawable/background_gif_lvl_closed">

                <ImageView
                    android:id="@+id/img_where_is_the_rabbit"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/rabbit_hat" />

                <TextView
                    android:id="@+id/text_where_is_the_rabbit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/where_is_the_rabbit"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_reset_all_games_1_of_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/space" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>